--- a/package.json
+++ b/package.json
@@ -8,24 +8,28 @@
     "grunt-exec": "~0.4.7",
     "grunt-karma": "^2.0.0",
     "grunt-ts": "^5.5.1",
-    "tfx-cli": "^0.3.26",
     "karma": "^1.1.0",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^1.1.1",
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-requirejs": "^1.0.0",
     "mocha": "^2.5.3",
-    "requirejs": "^2.2.0",
-    "typescript": "^2.0.6",
-    "typings": "^1.0.4",
-    "vss-web-extension-sdk": "^1.104.0",
     "office-ui-fabric-react": "^0.66.0",
-    "react": "^15.3.2"
+    "requirejs": "^2.2.0",
+    "tfx-cli": "^0.3.26",
+    "typescript": "^2.0.6",
+    "typings": "^1.5.0",
+    "vss-web-extension-sdk": "^1.106.0"
   },
   "name": "pull-request-search",
   "private": true,
   "version": "0.6.0",
   "scripts": {
+    "preinstall": "npm install -g tsc && npm install -g grunt",
     "postinstall": "typings install"
+  },
+  "dependencies": {
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
   }
 }
