--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
     "compilerOptions": {
         "module": "amd",
         "sourceMap": false,
-        "rootDir": "./scripts"
+        "rootDir": "./scripts",
+        "target": "es6",
+        "jsx": "react"
     },
     "filesGlob": [
         "./scripts/**/*.ts",
