--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "files": [
         "scripts/app.ts",
         "scripts/contentsContracts.ts",
+        "scripts/hashChange.ts",
         "scripts/IdentityPicker.ts",
+        "scripts/runQuery.ts",
         "typings/index.d.ts"
     ]
 }
