--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
         "scripts/hashChange.ts",
         "scripts/IdentityPicker.ts",
         "scripts/runQuery.ts",
+        "scripts/searchContents.ts",
         "typings/index.d.ts"
     ]
 }
