--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,21 +3,13 @@
         "module": "amd",
         "sourceMap": false,
         "rootDir": "./scripts",
-        "target": "es5",
-        "jsx": "react"
+        "target": "es6",
+        "jsx": "react",
+        "strictNullChecks": true
     },
     "filesGlob": [
         "./scripts/**/*.ts",
         "!**/*.tests.ts",
         "./typings/index.d.ts"
-    ],
-    "files": [
-        "scripts/app.ts",
-        "scripts/contentsContracts.ts",
-        "scripts/IdentityPicker.ts",
-        "scripts/runQuery.ts",
-        "scripts/searchContents.ts",
-        "scripts/status.ts",
-        "typings/index.d.ts"
     ]
 }
