get and resize images

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,12 @@
         "scripts/app.ts",
         "scripts/caching/cachedValue.ts",
         "scripts/caching/extensionCache.ts",
+        "scripts/caching/throttlePromises.ts",
         "scripts/contentsContracts.ts",
         "scripts/identity/getIdentities.ts",
         "scripts/identity/IdentityPicker.ts",
-        "scripts/identity/throttlePromises.ts",
+        "scripts/images.ts",
+        "scripts/RestCall.ts",
         "scripts/runQuery.ts",
         "scripts/searchContents.ts",
         "scripts/status.ts",
