--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/lz-string": "^1.3.32",
     "chai": "^3.5.0",
     "grunt": "~1.0.1",
     "grunt-cli": "^1.2.0",
@@ -13,6 +14,7 @@
     "karma-mocha": "^1.1.1",
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-requirejs": "^1.0.0",
+    "lz-string": "^1.4.4",
     "mocha": "^2.5.3",
     "requirejs": "^2.2.0",
     "typescript": "^2.3.3",
