get image lookup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,11 @@
         "scripts/caching/extensionCache.ts",
         "scripts/caching/throttlePromises.ts",
         "scripts/contentsContracts.ts",
+        "scripts/identity/defaultImages.ts",
         "scripts/identity/getIdentities.ts",
         "scripts/identity/IdentityPicker.ts",
-        "scripts/images.ts",
+        "scripts/identity/images.ts",
+        "scripts/identity/imageStorage.ts",
         "scripts/RestCall.ts",
         "scripts/runQuery.ts",
         "scripts/searchContents.ts",
