--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/lz-string": "^1.3.32",
+    "@types/q": "^1.0.5",
     "chai": "^3.5.0",
     "grunt": "~1.0.1",
     "grunt-cli": "^1.2.0",
