--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
     "@types/lz-string": "^1.3.32",
     "@types/q": "^1.0.5",
     "chai": "^3.5.0",
-    "grunt": "~1.0.1",
+    "grunt": "^1.0.3",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "~1.0.0",
     "grunt-exec": "~0.4.7",
-    "grunt-karma": "^2.0.0",
+    "grunt-karma": "^3.0.0",
     "grunt-ts": "^5.5.1",
-    "karma": "^1.1.0",
+    "karma": "^3.0.0",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^1.1.1",
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-requirejs": "^1.0.0",
     "lz-string": "^1.4.4",
-    "mocha": "^2.5.3",
+    "mocha": "^5.2.0",
     "requirejs": "^2.2.0",
     "typescript": "^2.3.3",
     "typings": "^1.5.0",
